argo-rollouts/base/argo-rollouts-dashboard-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-rollouts-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: argo-rollouts-dashboard
    spec:
      containers:
      - image: quay.io/argoproj/kubectl-argo-rollouts:v1.1.1
        imagePullPolicy: IfNotPresent
        name: argo-rollouts-dashboard
        ports:
        - containerPort: 3100
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: argo-rollouts-dashboard
      serviceAccountName: argo-rollouts-dashboard
      terminationGracePeriodSeconds: 30
