argo-rollouts/base/argo-rollouts-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-rollouts-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-rollouts-dashboard
    spec:
      serviceAccountName: argo-rollouts-dashboard
      containers:
        - name: argo-rollouts-dashboard
          image: quay.io/argoproj/kubectl-argo-rollouts:v1.2.0
          ports:
            - containerPort: 3100
              protocol: TCP
              name: http
