argo-rollouts/base/argo-rollouts-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
spec:
  ports:
  - port: 3100
  selector:
    app.kubernetes.io/name: argo-rollouts-dashboard
  sessionAffinity: None
  type: ClusterIP
