argo-rollouts/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
    prometheus.io/scrape: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argo-rollouts-dashboard.k3s
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-rollouts-dashboard
              port:
                name: http
  tls:
    - hosts:
        - argo-rollouts-dashboard.k3s
      secretName: argo-rollouts-dashboard.k3s.cloud-tls
